Added Dockerfile.ruby to simplify fluent deployment

--- a/fluentd-forwarder-build-config-template.yaml
+++ b/fluentd-forwarder-build-config-template.yaml
@@ -18,7 +18,7 @@ objects:
     tags:
       - name: latest
         annotations:
-          openshift.io/imported-from: registry.access.redhat.com/rhel7/rhel
+          # openshift.io/imported-from: registry.access.redhat.com/rhel7/rhel
         from:
           kind: DockerImage
           name: registry.access.redhat.com/rhel7/rhel
